# schedge

./: .gitignore  docker-compose.yml  package-lock.json  requirements.txt
.github/workflows/: ci.yml  tests.yml
cloud-terraform/: .gitignore  create-varfile.sh  deploy.tf  variables.tf
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment-backend.yaml  deployment-solver.yaml  deployment-web.yaml  ingress.yaml  load-balancer.yaml  service-backend.yaml  service-solver.yaml  service-web.yaml
notes/: 01-about.md  02-architecture.md  03-api-reference.md  04-cloud.md
schedge-backend/: Dockerfile  main.py  test_normalization.py
schedge-backend-mock/: mock.py
schedge-backend/static/: schema.json
schedge-solver/: Cargo.toml  Dockerfile
schedge-solver/fuzz/: Cargo.toml
schedge-solver/fuzz/fuzz_targets/: mcs.rs
schedge-solver/src/: duration.rs  main.rs  solver.rs
schedge-solver/tests/: golden.rs
schedge-web/: .env  Dockerfile  index.html  package-lock.json  package.json
schedge-web/src/: App.tsx  TaskList.tsx  TaskUtils.test.ts  WeekCalendar.tsx  api.test.ts  api.ts  components.tsx  index.css  slots.test.ts  slots.ts  userStore.ts
tests/: test_system_api.py
utils/: debug-mongo.py
