[package]
name = "schedge-solver"
edition = "2024"
version = "0.1.0"

[lib]
name = "schedge_solver"
path = "src/solver.rs"

[[bin]]
name = "schedge-solver-server"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.40"
rand = "0.9.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
regex = "1.11.1"
smol_str = { version = "0.3.2", features = ["serde"] }
log = "0.4.26"
env_logger = "0.11.6"

[dev-dependencies]
collapse = "0.1.2"
